tests/baselines/reference/typeFromPropertyAssignment19.errors.txt
tests/cases/conformance/salsa/index.js(1,11): error TS2304: Cannot find name 'require'.
tests/cases/conformance/salsa/semver.js(1,1): error TS2539: Cannot assign to '"tests/cases/conformance/salsa/semver"' because it is not a variable.
tests/cases/conformance/salsa/semver.js(1,11): error TS2304: Cannot find name 'module'.


==== tests/cases/conformance/salsa/index.js (1 errors) ====
    const C = require("./semver")
              ~~~~~~~
!!! error TS2304: Cannot find name 'require'.
    var two = C.f(1)
    
==== tests/cases/conformance/salsa/semver.js (2 errors) ====
    exports = module.exports = C
    ~~~~~~~
!!! error TS2539: Cannot assign to '"tests/cases/conformance/salsa/semver"' because it is not a variable.
              ~~~~~~
!!! error TS2304: Cannot find name 'module'.
    C.f = n => n + 1
    function C() {
        this.p = 1
    }